Drop 2nd CUDA compiler version constraint
This was effectively interpreted as a build number constraint as the
version was already specified. Thus it caused solver issues as `11.5` is
not a valid build number. So drop this from the CUDA compiler line to
fix this issue.

--- a/recipes/xgboost/meta.yaml
+++ b/recipes/xgboost/meta.yaml
@@ -38,7 +38,7 @@ requirements:
   build:
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
-    - {{ compiler('cuda') }} {{ cuda_version }}.*         # [xgboost_proc_type == "gpu"]
+    - {{ compiler('cuda') }}  # [xgboost_proc_type == "gpu"]
     - git
     - cmake
     - make
